# pymock-module

./: .gitignore  .pre-commit-config.yaml  Makefile  README.rst  conftest.py  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: publish-to-pypi.yaml
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html  mock_module.html
docs/_sources/: index.rst.txt
docs/_sources/src/: mock_module.rst.txt
docs/_static/: documentation_options.js  pygments.css
docs/src/: mock_module.html
sphinx/: Makefile
sphinx/source/: conf.py  index.rst
sphinx/source/_static/css/: custom.css
src/: mock_module.py
tests/: conftest.py  dummier.py  dummy.py  test_find_imports.py
